[metadata]
name = bound
author = Chris Haumesser
author-email = chris.haumesser@gmail.com
summary = spam/scam domain blacklisting for unbound
description-file = README.md
requires-python = >=3.6
home-page = https://github.com/wryfi/bound
classifier =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Internet
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX

[options]
packages = find:

[files]
data_files =
    templates = bound/tests/test_data/*

[entry_points]
console_scripts =
    bound = bound.bound:main